# online-forum

./: .gitignore  Readme.md
.github/workflows/: node.js.yml  rust.yml
backend/: .gitignore  Cargo.toml
backend/src/: lib.rs  main.rs
backend/src/dao/: comment.rs  connect.rs  dao_error.rs  email.rs  mod.rs  post.rs  section.rs  user.rs
backend/src/files/: file_action.rs  file_operate.rs  mod.rs
backend/src/server/: action.rs  entity.rs  mod.rs
backend/src/server_config/: entity.rs  mod.rs
backend/src/user_action/: email_action.rs  forum_manage.rs  mod.rs  user_profiles.rs  user_sign_in.rs  user_sign_up.rs
backend/src/utils/: email.rs  error.rs  mod.rs
backend/src/visit_action/: mod.rs  post_action.rs  section_action.rs
doc/: database.sql  files.md  manage.md  page-load.md  section.md  standard.md  todo.md  user.md
frontend/: .gitignore  index.html  package-lock.json  package.json  vite.config.js
frontend/public/: config.js
frontend/src/: App.vue  main.js
frontend/src/assets/css/: style.css
frontend/src/components/: FileUploadButton.vue  Footer.vue  Navbar.vue  NavbarUser.vue  Pagination.vue  ServerConfig.vue  Utils.vue
frontend/src/components/icons/: OutLineCommentDisabed.vue
frontend/src/routes/: 404.vue  ForgetPassword.vue  Home.vue  Manage.vue  Post.vue  PostEdit.vue  Search.vue  Section.vue  UserProfiles.vue  index.js
