[package]
name = "backend"
version = "0.1.0"
edition = "2021"
authors = ['StudyLessShape <a664554724@qq.com>']

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6"
actix-web = "4.3.0"
actix-multipart = "0.6"
actix-cors = "0.6"
env_logger = "0.10.0"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
mysql = "23.0"
mysql_common = { version = "0.29", features = ["chrono", "uuid"] }
uuid = { version = "1.3", features = ["v4", "v7", "js", "serde", "fast-rng"] }
chrono = { version = "0.4", features = ["serde"] }
lettre = "0.10"
rand = "0.8"
futures-util = "0.3"
clap = { version = "4.2.7", features = ['default', 'cargo', 'derive'] }
quote = '1.0.26'
toml = '0.7'
once_cell = "1.17"