[package]
name = "backend"
version = "0.1.0"
edition = "2021"
authors = ['StudyLessShape <a664554724@qq.com>']

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.6"
actix-web = "4.9.0"
actix-multipart = "0.7"
actix-cors = "0.7"
env_logger = "0.11"
log = "0.4"
serde = { version = "1.0.209", features = ["derive"] }
mysql = "25.0"
mysql_common = { version = "0.32.4", features = ["chrono"] }
uuid = { version = "1.10.0", features = ["v4", "v7", "js", "serde", "fast-rng"] }
chrono = { version = "0.4.38", features = ["serde"] }
lettre = "0.11.7"
rand = "0.8"
futures-util = "0.3.30"
clap = { version = "4.5.16", features = ['default', 'cargo', 'derive'] }
toml = '0.8.19'
once_cell = "1.19.0"